--- a/css/timeline.css
+++ b/css/timeline.css
@@ -1,6 +1,13 @@
 
+.aboutme-heading{
+  padding-top: 30px;
+  font-size: 40px;
+  color:white;
+  background-color: #111;
+}
+
 .timeline-container {
-  min-height: 100vh;
+  min-height: 80vh;
   width: 100%;
   display: flex;
   align-items: center;
@@ -8,6 +15,8 @@
   padding: 100px 0;
   background-color: #111;
 }
+
+
 .timeline {
   width: 80%;
   height: auto;
@@ -35,11 +44,25 @@
   line-height: 30px;
   margin-bottom: 10px;
 }
+.timeline-content h2 {
+  font-weight: 500;
+  font-size: 18px;
+  color : rgb(146, 146, 146);
+  line-height: 20px;
+  margin-bottom: 10px;
+}
 .timeline-content p {
   font-size: 16px;
-  line-height: 30px;
+  line-height: 20px;
   font-weight: 300;
+  letter-spacing: 1px;
 }
+
+.timeline-content b {
+  font-weight: 500;
+  color:rgb(44, 128, 255);
+}
+
 .timeline-content .date {
   font-size: 12px;
   font-weight: 300;
@@ -96,6 +119,6 @@
     top: -30px;
   }
   .timeline ul li:hover::before {
-    background-color: rgb(55, 99, 223);
+    background-color: rgb(207, 208, 211);
   }
 }
