--- a/waroftank/TemplateData/style.css
+++ b/waroftank/TemplateData/style.css
@@ -1,4 +1,15 @@
-.webgl-content * {border: 0; margin: 0; padding: 0; background-color:#1e1f22 ;}
+body {
+    margin: 0;
+    font-family: var(--bs-font-sans-serif);
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: white;
+    background-color: #1e1f22;
+    -webkit-text-size-adjust: 100%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  }
+.webgl-content * {border: 0; margin: 0; padding: 0;}
 .webgl-content {position: absolute; top: 50%; left: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
 
 .webgl-content .logo, .progress {position: absolute; left: 50%; top: 50%; -webkit-transform: translate(-50%, -50%); transform: translate(-50%, -50%);}
