--- a/css/styles.css
+++ b/css/styles.css
@@ -6575,6 +6575,10 @@ textarea.form-control-lg {
   width: 50% !important;
 }
 
+.w-60 {
+  width: 60% !important;
+}
+
 .w-75 {
   width: 75% !important;
 }
