--- a/css/timeline.css
+++ b/css/timeline.css
@@ -134,6 +134,105 @@
   background-color: #111;
 }
 
+.courses{
+  color:white;
+  padding-bottom: 30px;
+  align-items: center;
+  justify-content: center;
+  background-color: #111;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  white-space: normal;
+}
+
+.courses-content{
+  background-color: #1e1f22;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  word-spacing: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  white-space: normal;
+}
+
+.courses-content .title {
+  color: white;
+  font-size: 25px;
+  word-spacing: 1px;
+  padding-left: 20px;
+  padding-right:20px;
+  padding-top: 20px;
+  position: relative;
+  white-space: normal;
+  transition: all 0.2s ease;
+}
+.course:hover .title{
+  color: white;
+  font-size: 27px;
+  font-weight: 700;
+  padding-left: 20px;
+  padding-right:20px;
+  padding-top: 20px;
+  position: relative;
+  transition: all 0.2s ease;
+  /*
+  text-shadow:
+    0 0 10px #fff,
+    0 0 16px #fff,
+    0 0 72px rgb(35, 109, 247),
+    0 0 82px rgb(35, 109, 247),
+    0 0 90px rgb(35, 109, 247),
+    0 0 100px rgb(35, 109, 247);
+  */
+  
+}
+
+.courses .description{
+  opacity: 0;
+  color: rgb(114, 114, 114);
+  z-index: 1;
+  font-size: 20px;
+  max-height: 0;
+  word-spacing: 1px;
+  padding-left: 40px;
+  padding-right:40px;
+  position: relative;
+  transition: all 0.3s ease;
+
+}
+
+.course:hover .description{
+  transition: all 0.3s ease;
+  opacity: 1;
+  max-height:150em;
+}
+
+.courses .grade{
+  opacity: 0;
+  max-height: 0;
+  transition: all 0.3s ease;
+  font-size: 20px;
+  word-spacing: 1px;
+  text-shadow:
+  0 0 10px #fff,
+  0 0 16px #fff,
+  0 0 72px rgb(35, 109, 247),
+  0 0 82px rgb(35, 109, 247),
+  0 0 90px rgb(35, 109, 247),
+  0 0 100px rgb(35, 109, 247);
+}
+
+.course:hover .grade{
+  transition: all 0.3s ease;
+  opacity: 1;
+  padding-bottom: 10px;
+}
+
 .skills{
   color:white;
   background-color: #111;
@@ -157,6 +256,8 @@
   align-items: center;
   flex-wrap: wrap;
 }
+
+
 
 .skills-content .text{
   color: white;
