--- a/css/styles.css
+++ b/css/styles.css
@@ -10873,7 +10873,7 @@ textarea.form-control-lg {
 .project-body {
   width: 100vw;
   background-color: #1D1D1D;
-  margin: 0;
+  margin: 0px;
   font-family: helvetica;
 }
 
